# pymetager

./: .gitignore  README.md  README.rst  noxfile.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-docs.txt  setup.cfg
docs/: Makefile  _config.yml  _toc.yml  conf.py  index.md  quickstart.md  reference_index.rst  user_guide.md
docs/reference/: .gitignore  cli.rst  modules.rst  pymetager.cli.rst  pymetager.rst  pymetager.version_manager.rst
src/pymetager/: cli.py  version_manager.py
tests/: test_base.py
