[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
package_dir = "src"
include_package_data = true

[tool.poetry]
name = "pymetager"
version = "0.0.2"
description = "A Python package metadata manager by BuildNN."
authors = [ "BuildNN Team",]
license = "BSD 4-Clause License"
maintainers = [ "BuildNN Team",]
readme = "README.rst"
homepage = "https://pymetager.readthedocs.io/en/latest/"
repository = "https://www.github.com/buildnn/pymetager"
documentation = "https://pymetager.readthedocs.io/en/latest/"
keywords = [ "pymetager", "buildnn",]
classifiers = [ "Environment :: Console", "Intended Audience :: Developers", "Operating System :: POSIX :: Linux", "Operating System :: Unix", "Programming Language :: Python :: 3", "Topic :: Software Development :: Libraries :: Python Modules",]

[build-system.packages.find]
where = "src"
include = "*"
exclude = "*.egg-info"

[tool.poetry.urls]
Code = "https://www.github.com/buildnn/pymetager"
"Bug tracker" = "https://github.com/buildnn/pymetager/issues"

[tool.poetry.dependencies]
python = ">=3.8, <=3.10"
click = ">=6"
packaging = ">=18"

[tool.poetry.dev-dependencies]
black = ">=20.8b0"
coverage = ">=5.0.1"
flake8 = ">=3.8.0"
nox = ">=2020.5.24"
pytest = ">= 5.4.1"
pytest-cov = ">=2.10.0"
python-dotenv = ">=0.5.1"

[tool.poetry.scripts]
pymetager = "pymetager.cli:cli"
