[metadata]
name = pypack_metager
version = 0.0.1.dev0
url = https://github.com/buildnn/pypack-metager
project_urls = 
	Repository = https://github.com/buildnn/pypack-metager
	Documentation = https://github.com/buildnn/pypack-metager
	Code = https://www.github.com/buildnn/pypack-metager
	Issue tracker = https://github.com/buildnn/pypack-metager/issues
author = BuildNN Team
author_email = dev@buildnn.com
license = BSD 4-Clause License
maintainer = BuildNN Team
maintainer_email = dev@buildnn.com
description = A Python package metadata manager by BuildNN.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: POSIX :: Linux
	Operating System :: Unix
	Programming Language :: Python :: 3
	Software Development :: Libraries :: Python Modules
keywords = 
	pypack_metager
	buildnn

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
install_requires = 
	click
	packaging

[options.entry_points]
console_scripts = 
	pymetager = pypack_metager.cli:cli

[options.packages.find]
where = src
include = 
	*
exclude = 
	*.egg-info

[flake8]
max-line-length = 88
per-file-ignores = 
	__init__.py: F401

[black]
line-length = 88

